Updating project documentation

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,6 +4,6 @@ spring:
     username: postgres
     password: postgres
   jpa:
-    show-sql: true
     hibernate:
       ddl-auto: create
+    open-in-view: false
