--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ version: '3.9'
 
 services:
   postgres:
-    image: postgres:14
+    image: postgres:14.2-alpine3.15
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_USERNAME=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=inventory_management
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: inventory_management
     volumes:
       - postgresql_data:/var/lib/postgresql/data
     networks:
