Updating to spring 3

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,13 +13,13 @@ services:
       - postgresql_data:/var/lib/postgresql/data
     networks:
       - postgres
-
-  api:
-    build: .
-    ports:
-      - "8080:8080"
-    depends_on:
-      - "postgres"
+#
+#  api:
+#    build: .
+#    ports:
+#      - "8080:8080"
+#    depends_on:
+#      - "postgres"
 
 volumes:
   postgresql_data:
